workspace-sf/force-app/main/default/objects/GrupoOferta__c/GrupoOferta__c.object-meta.xml
<CustomObject>
    <label>Grupo da oferta</label>
    <nameField>
        <label>Nome do Grupo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupos da oferta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>