workspace-sf/force-app/main/default/objects/GrupoOferta__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <description>Este campo define a ordem dos grupos no orçamento que deve ser alinhado com a equipe do Sinapse.</description>
    <inlineHelpText>Este campo define a ordem dos grupos no orçamento que deve ser alinhado com a equipe do Sinapse.</inlineHelpText>
    <label>Número</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>