workspace-sf/force-app/main/default/objects/GrupoOferta__c/fields/Oferta__c.field-meta.xml
<CustomField>
    <fullName>Oferta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oferta</label>
    <referenceTo>Oferta__c</referenceTo>
    <relationshipName>GruposOferta</relationshipName>
    <type>Lookup</type>
</CustomField>