workspace-sf/force-app/main/default/objects/GrupoOferta__c/fields/QuantidadeVidas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeVidas__c</fullName>
    <description>PLV-3689 - deve ser preenchido com o ID que estiver relacionado ao grupo de vidas (ID do &quot;dicionário&quot;), e esse campo deverá levar em consideração a resposta que for preenchida no portal.</description>
    <inlineHelpText>Deve ser preenchido com o ID que estiver relacionado ao grupo de vidas (ID do &quot;dicionário&quot;), e esse campo deverá levar em consideração a resposta que for preenchida no portal.</inlineHelpText>
    <label>Quantidade de vidas fórmula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>