workspace-sf/force-app/main/default/objects/GrupoOferta__c/fields/QuantidadeVidasNumero__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeVidasNumero__c</fullName>
    <description>PLV -  3689 Se for selecionada quantidade fixa, exibir um outro campo denominado &quot;Quantidade de vidas número&quot; para que a pessoa cadastre a(s) quantidade(s) daquele grupo</description>
    <inlineHelpText>Preencha a quantidade deste grupo.</inlineHelpText>
    <label>Quantidade de vidas número</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>