workspace-sf/force-app/main/default/objects/GrupoOferta__c/fields/TipoCalculo__c.field-meta.xml
<CustomField>
    <fullName>TipoCalculo__c</fullName>
    <label>Tipo de Cálculo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MOVSINT</fullName>
                <label>Sintético</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>