workspace-sf/force-app/main/default/objects/GrupoOferta__c/fields/TipoQuantidadeVidas__c.field-meta.xml
<CustomField>
    <fullName>TipoQuantidadeVidas__c</fullName>
    <description>PLV-3689 - Esse novo campo deverá ter duas opções de resposta, sendo &quot;Quantidade fixa&quot; ou &quot;Fórmula&quot;. O referido campo deverá ser obrigatório e só poderá ser selecionada uma única opção. 

Se for selecionada quantidade fixa, exibir um outro campo denominado &quot;Quantidade de vidas&quot; para que a pessoa cadastre a(s) quantidade(s) daquele grupo.

Se fórmula, o campo Fórmula deve ser preenchido com o ID que estiver relacionado ao grupo de vidas (ID do &quot;dicionário&quot;), e esse campo deverá levar em consideração a resposta que for preenchida no portal.</description>
    <inlineHelpText>Quantidade fixa: Preencha o campo &quot;Quantidade de vidas número&quot;.
Fórmula: Preencha o campo &quot;Quantidade de vidas fórmula&quot;.</inlineHelpText>
    <label>Tipo de quantidade de vidas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantidade fixa</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
                <label>Fórmula</label>
            </value>
            <value>
                <fullName>Fórmula</fullName>
                <isActive>false</isActive>
                <label>Fórmula_Old</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>