workspace-sf/force-app/main/default/objects/GrupoOferta__c/validationRules/NaoPreencher_QuantidadeVidasFormula.validationRule-meta.xml
<ValidationRule>
    <fullName>NaoPreencher_QuantidadeVidasFormula</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					ISPICKVAL(TipoQuantidadeVidas__c, &apos;Quantidade fixa&apos;),
				 NOT(ISBLANK(QuantidadeVidas__c))
	)</errorConditionFormula>
    <errorDisplayField>QuantidadeVidas__c</errorDisplayField>
    <errorMessage>Não preencha o campo &apos;Quantidade de vidas fórmula&apos; quando o Grupo da oferta for &apos;Quantidade fixa&apos;</errorMessage>
</ValidationRule>