workspace-sf/force-app/main/default/objects/GrupoOferta__c/validationRules/NaoPreencher_QuantidadeVidasNumero.validationRule-meta.xml
<ValidationRule>
    <fullName>NaoPreencher_QuantidadeVidasNumero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					ISPICKVAL(TipoQuantidadeVidas__c, &apos;Formula&apos;),
				 NOT(ISNULL(QuantidadeVidasNumero__c))
	)</errorConditionFormula>
    <errorDisplayField>QuantidadeVidasNumero__c</errorDisplayField>
    <errorMessage>Não preencha o campo &apos;Quantidade de vidas número&apos; quando o Grupo da oferta for &apos;Fórmula&apos;</errorMessage>
</ValidationRule>