workspace-sf/force-app/main/default/objects/GrupoOferta__c/validationRules/Preencher_QuantidadeVidasFormula.validationRule-meta.xml
<ValidationRule>
    <fullName>Preencher_QuantidadeVidasFormula</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					ISPICKVAL(TipoQuantidadeVidas__c, &apos;Formula&apos;),
				  ISBLANK(QuantidadeVidas__c)
	)</errorConditionFormula>
    <errorDisplayField>QuantidadeVidas__c</errorDisplayField>
    <errorMessage>Preencha o campo &apos;Quantidade de vidas fórmula&apos; quando o Grupo da oferta for &apos;Fórmula&apos;</errorMessage>
</ValidationRule>