workspace-sf/force-app/main/default/objects/GrupoOferta__c/validationRules/Preencher_QuantidadeVidasNumero.validationRule-meta.xml
<ValidationRule>
    <fullName>Preencher_QuantidadeVidasNumero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					ISPICKVAL(TipoQuantidadeVidas__c, &apos;Quantidade fixa&apos;),
				  ISNULL(QuantidadeVidasNumero__c)
	)</errorConditionFormula>
    <errorDisplayField>QuantidadeVidasNumero__c</errorDisplayField>
    <errorMessage>Preencha o campo &apos;Quantidade de vidas número&apos; quando o Grupo da oferta for &apos;Quantidade fixa&apos;</errorMessage>
</ValidationRule>