workspace-sf/force-app/main/default/objects/GrupoOferta__c/listViews/Filtrado.listView-meta.xml
<ListView>
    <fullName>Filtrado</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>TipoQuantidadeVidas__c</columns>
    <columns>QuantidadeVidas__c</columns>
    <columns>Oferta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Oferta__c</field>
        <operation>equals</operation>
        <value>Vida Essencial 2_Teste</value>
    </filters>
    <label>Filtrado</label>
</ListView>